--- a/OUT ESCOLA/Vish/urna.css
+++ b/OUT ESCOLA/Vish/urna.css
@@ -4,12 +4,15 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: rgb(27, 22, 40);
+}
+
 main{
     display: flex;
     justify-content: center;
     align-items: center;
-
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .urna{
     position: absolute;
@@ -25,7 +28,7 @@ main{
     border-radius: 25px;
     
     background-color: #B3B3B3;
-    box-shadow: 10px 10px 30px rgb(80, 80, 80);
+    box-shadow: 10px 10px 30px rgb(12, 96, 3);
     
     .tela{     
         width: 80vh;
@@ -41,9 +44,8 @@ main{
 
         .tela2{
             width: 70vh;
-            height: 50vh;    
+            height: 50vh;
             border-radius: 15px;
-    
             background-color: #ffffff;
         }
     }
@@ -52,6 +54,27 @@ main{
         display: grid;
         justify-content: center;
     }
+    
+    .cabecalho{
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: center;
+        width: 40vh;
+        height: 18vh;
+        border: 3px rgb(155, 155, 155) solid;
+        border-radius: 10px;
+        margin-bottom: 30%;
+        padding-left: 7%;
+
+        p{
+            padding: 4%;
+            font-size: 30px;
+            font-weight: 800;
+            color: rgb(101, 101, 101);
+        }
+    }
+
     .botoes-nmr{
         display: grid;
         grid-template-rows: auto auto auto auto;
@@ -65,9 +88,15 @@ main{
 
             background-color: rgb(38, 38, 38);
             border-radius: 5px;
+            cursor: pointer;
+            border-style: none;
             
             color: white;
             font-size: 25px;
+        }
+
+        .nmr:active{
+            transform: translateY(2px);
         }
     }
 
@@ -78,11 +107,13 @@ main{
         grid-template-columns: auto auto auto;
         margin-left: 2%;
         gap: 10px;
+        
 
         .botao{
             margin-top: 20%;
             border-style: none;
             border-radius: 5px;
+            cursor: pointer;
             
             height: 5vh;
             width: 10vh;
@@ -99,6 +130,9 @@ main{
         .confirma{
             background-color: rgb(98, 255, 0);
             box-shadow: 3px 3px 1px rgb(67, 172, 2);
+        }
+        .botao:active{
+            transform: translateY(2px);
         }
     }
 }
