--- a/lider.css
+++ b/lider.css
@@ -20,7 +20,7 @@ main{
 
     }
 
-    .candidatos{
+    .container-candidatos{
         display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
@@ -29,9 +29,9 @@ main{
         align-items: center;
 
         width: 100%;
-        height: 100%;
+        height: 60vh;
     }
-    .candidato{
+    .candidatos{
         display: grid;
         grid-template-columns: auto auto;
         justify-content: left;
@@ -46,13 +46,17 @@ main{
             overflow: hidden;
             width: 20vh;
             height: 20vh;
-            background-color: white;
             border-radius: 100%;
         }
 
         .text{
             display: grid;
             grid-template-columns: auto;
+            padding-left: 10%;
+            line-height: 150%;
+            h5{
+                font-size: 25px;
+            }
         }
     }
 
