--- a/lider.css
+++ b/lider.css
@@ -33,7 +33,7 @@ main{
     }
     .candidatos{
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         justify-content: left;
         padding-left: 5%;
         align-items: center;
@@ -57,6 +57,24 @@ main{
             h5{
                 font-size: 25px;
             }
+        }
+    }
+
+    .vice{
+        position: absolute;
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        overflow: hidden;
+
+        margin: 8% 0% 0% 16%;
+        h5{
+            margin-right: 1vh;
+        }
+        img{
+            width: 7vh;
+            height: 7vh;
+            border-radius: 100%;
         }
     }
 
