--- a/OUT ESCOLA/Vish/T-inicial.css
+++ b/OUT ESCOLA/Vish/T-inicial.css
@@ -6,8 +6,8 @@
 }
 
 main{
-    background-color: rgb(27, 22, 40);
-    color: white;
+    background-color: rgb(238, 238, 238);
+    color: black;
 }
 
 .bloco{
@@ -35,7 +35,7 @@ main{
             margin-top: 2%;
         }
         #line{
-            color: rgb(47, 237, 47);
+            color: rgb(9, 0, 107);
         }
     }
 
@@ -53,7 +53,7 @@ main{
             width: 40vh;
             height: 8vh;
 
-            background-color: rgb(47, 237, 47);
+            background-color: rgb(9, 0, 107);
 
             font-weight: 600;
             color: aliceblue;
@@ -71,7 +71,7 @@ main{
             left: -100%;
             width: 100%;
             height: 100%;
-            background-color: #0d6605;
+            background-color: rgb(48, 39, 140);
             transition: left 0.4s ease;
         }
 
