--- a/OUT ESCOLA/Vish/urna.css
+++ b/OUT ESCOLA/Vish/urna.css
@@ -14,6 +14,7 @@ main{
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .urna{
     position: absolute;
     top: 0; bottom: 0;
@@ -47,6 +48,22 @@ main{
             height: 50vh;
             border-radius: 15px;
             background-color: #ffffff;
+
+            display: flex;
+            flex-wrap: nowrap;
+            align-items: center;
+            justify-content: center;
+            gap: 5%;
+
+            .textarea{
+                width: 30vh;
+                height: 15vh;
+                border: solid black;
+                border-radius: 10px;
+                padding: .5rem;
+                resize: none;
+                font-size: 90px;
+            }
         }
     }
 
@@ -134,5 +151,49 @@ main{
         .botao:active{
             transform: translateY(2px);
         }
+    }
+}
+
+.avancar{
+    margin-top: 50%;
+    margin-bottom: 5%;
+
+    font-size: 20px;
+
+   .botao{
+        position: relative;
+        display: inline-block;
+
+        border-radius: 5px;
+        border: none;
+
+        margin-top: 2%;
+        width: 40vh;
+        height: 8vh;
+
+        background-color: rgb(9, 0, 107);
+
+        font-weight: 600;
+        color: aliceblue;
+        font-size: 20px;
+
+        cursor: pointer;
+        overflow: hidden;
+        transition: color 0.4s ease;  
+    }
+
+    .botao::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(48, 39, 140);
+        transition: left 0.4s ease;
+    }
+
+    .botao:hover::before{
+        left: 0;
     }
 }
