--- a/OUT ESCOLA/Vish/info.css
+++ b/OUT ESCOLA/Vish/info.css
@@ -2,27 +2,29 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
     background-color: rgb(238, 238, 238);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main{
-    padding: 5%;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    line-height: 200%;
+    color: black;
+    margin: 5%;
+
+    #line{
+        color: rgb(9, 0, 107);
+    }
+
+    p{
+        text-align: justify;
+        font-size: 20px;
+    }
 }
 
-a{
-    margin: 3%;
-}
-
-button{
+.botao{
+    margin-bottom: 1%;
     position: relative;
     display: inline-block;
 
@@ -44,7 +46,7 @@ button{
     transition: color 0.4s ease;  
 }
 
-button::before{
+.botao::before{
     content: '';
     position: absolute;
     top: 0;
@@ -55,14 +57,7 @@ button::before{
     transition: left 0.4s ease;
 }
 
-button:hover::before{
+.botao:hover::before{
     left: 0;
 }
 
-.reset{
-    background: red;
-}
-.reset::before{
-    background: rgb(126, 0, 0);
-}
-   
