--- a/OUT ESCOLA/Vish/T-inicial.css
+++ b/OUT ESCOLA/Vish/T-inicial.css
@@ -87,3 +87,54 @@ main{
     }
 }
 
+/* Media Query para dispositivos móveis */
+@media only screen and (max-width: 768px) {
+    main{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .bloco {
+        height: auto; /* Reduz a altura do bloco de vídeo */
+        overflow: hidden;
+
+        video{
+            width: 70vh;
+        }
+    }
+
+    .container {
+        width: 100vw; /* Aumenta a largura da área utilizável */
+        height: 100vh; /* Ajusta a altura conforme o conteúdo */
+        align-items: center;
+    }
+
+    .textos {
+        width: 90vw;
+
+        align-items: center;
+        h1{
+            font-size: 40px;
+        }
+        #text {
+            font-size: 14px;
+        }
+        #line{
+            display: none;
+        }
+    }
+
+    .baixo {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .info {
+        font-size: 14px;
+    }
+
+    .botao {
+        width: 90%;
+        height: 6vh; 
+        font-size: 16px;
+    }
+}
