--- a/OUT ESCOLA/Vish/urna.css
+++ b/OUT ESCOLA/Vish/urna.css
@@ -154,46 +154,126 @@ main{
     }
 }
 
-.avancar{
+.baixo2{
     margin-top: 50%;
     margin-bottom: 5%;
-
-    font-size: 20px;
-
-   .botao{
-        position: relative;
-        display: inline-block;
-
-        border-radius: 5px;
-        border: none;
-
-        margin-top: 2%;
-        width: 40vh;
-        height: 8vh;
-
-        background-color: rgb(9, 0, 107);
-
-        font-weight: 600;
-        color: aliceblue;
+    .avancar{
         font-size: 20px;
+    
+       .botao{
+            position: relative;
+            display: inline-block;
+    
+            border-radius: 5px;
+            border: none;
+    
+            margin-top: 2%;
+            width: 40vh;
+            height: 8vh;
+    
+            background-color: rgb(9, 0, 107);
+    
+            font-weight: 600;
+            color: aliceblue;
+            font-size: 20px;
+    
+            cursor: pointer;
+            overflow: hidden;
+            transition: color 0.4s ease;  
+        }
+    
+        .botao::before{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(48, 39, 140);
+            transition: left 0.4s ease;
+        }
+    
+        .botao:hover::before{
+            left: 0;
+        }
+    }
+}
 
-        cursor: pointer;
-        overflow: hidden;
-        transition: color 0.4s ease;  
+
+@media only screen and (max-width: 800px) {
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    main{
+        height: 100vh;
+        border: black solid;
+
+    }
+    .urna {
+        width: 80vw;
+        height: 75vh;
+        flex-direction: column;
+        padding: 5%;
+        margin-bottom: 45%;
+
+
+        .tela {
+            width: 90%;
+            height: auto;
+            margin: 5%;
+            
+            .tela2 {
+                width: 100%;
+                height: auto;
+                flex-wrap: wrap;
+                gap: 2%;
+                
+                .textarea {
+                    width: 100%;
+                    height: auto;
+                    font-size: 50px;
+                }
+            }
+        }
+
+        .cabecalho {
+           display: none;
+        }
+
+        .botoes-nmr, .botoes-confirma {
+            margin: 5% auto;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 5px;
+
+
+            .nmr, .botao {
+                width: 10vh;
+                height: 6vh;
+                font-size: 18px;
+            }
+
+            .botao {
+
+                width: 10vh;
+                font-size: 10px;
+            }
+        }
+
     }
 
-    .botao::before{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(48, 39, 140);
-        transition: left 0.4s ease;
-    }
-
-    .botao:hover::before{
-        left: 0;
+    .baixo2{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 165%;
+        margin-left: 10%;
+        .avancar{
+            .botao{
+                width: 80vw;
+                height: 7vh;
+            }
+        }
     }
 }
