--- a/OUT ESCOLA/Vish/T-inicial.css
+++ b/OUT ESCOLA/Vish/T-inicial.css
@@ -87,14 +87,14 @@ main{
     }
 }
 
-/* Media Query para dispositivos móveis */
-@media only screen and (max-width: 768px) {
+
+@media only screen and (max-width: 800px) {
     main{
         display: flex;
         flex-wrap: wrap;
     }
     .bloco {
-        height: auto; /* Reduz a altura do bloco de vídeo */
+        height: auto; 
         overflow: hidden;
 
         video{
@@ -103,8 +103,8 @@ main{
     }
 
     .container {
-        width: 100vw; /* Aumenta a largura da área utilizável */
-        height: 100vh; /* Ajusta a altura conforme o conteúdo */
+        width: 100vw;
+        height: 100vh;
         align-items: center;
     }
 
